sumo/tests/traci/VariableSubscription/errors/UnknownVehicle/testclient_out.traci
TraCITestClient output file. Date: Mon Feb 01 11:04:44 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=212 objID=x with 1 variables
.. Answered with error to command (212), [description: Could not add subscription (Vehicle 'x' is not known).]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
